# estrutura_de_dados_2_2023

./: CMakeLists.txt  grafo_comparation.c  grafo_comparation.h  graph.c  input_output.c  main.c  makefile  memory_functions.c  memory_functions.h
graph_Vitor_Rodrigues/: CMakeLists.txt  grafo_comparation.c  grafo_comparation.h  graph.c  graph.h  input_output.h  main.c  makefile  memory_functions.c  memory_functions.h  pratica_grafos_Vitor_Rodrigues
graph_Vitor_Rodrigues/matriz_adjacencia/: grafo_matriz_adjacencia.c  grafo_matriz_adjacencia.h
list_vertex/: list_vertex.c  list_vertex.h  no_vertex.c  no_vertex.h
matriz_adjacencia/: grafo_matriz_adjacencia.c  grafo_matriz_adjacencia.h
respost_search/: queue.c  queue.h  respost_search.c  respost_search.h
